# dmsnowflake

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
include/: dmsnowflake.h  dmsnowflake.hpp  dmsnowflake_config.h.in  snowflake.hpp  snowflake2.hpp
src/dmsnowflake/: dmsnowflake.cpp
test/dmsnowflaketest/: dmsnowflaketest.cpp
